Fixing overflow bug with the "What is this?" section

--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -12,8 +12,8 @@ body {
     font-family: "mordred", "Lucida Grande", sans-serif;
     font-size: 19px;
 }
-    
-    
+
+
 /* Generated by Font Squirrel (http://www.fontsquirrel.com) on May 6, 2015 */
 @font-face {
     font-family: "mordred";
@@ -95,7 +95,9 @@ header {
 
 main {
     position: relative;
-    flex: 0 1 auto;
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
     width: $container-good-width;
     max-width: 100%;
     box-sizing: border-box;
@@ -111,7 +113,7 @@ footer {
     max-width: 100%;
 }
 
-    
+
 // move to 3 columns if the device is landscape and short
 @media (max-height: 475px) and (orientation: landscape)  {
 
@@ -125,5 +127,3 @@ footer {
         flex: 0 0 33.33333333%;
     }
 }
-
-
