--- a/app/scss/options-panel.scss
+++ b/app/scss/options-panel.scss
@@ -10,7 +10,7 @@ $transition: 0.25s;
 
     padding: 1rem;
     opacity: 0;
-    overflow: hidden;
+    overflow: auto;
     transition: none;
     transform: scale(0.8);
     z-index: -1;
@@ -41,4 +41,3 @@ $transition: 0.25s;
         opacity: 0;
     }
 }
-
